--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Welcome to Genius Bistro</h1>
+    <h1>Welcome to hungry-people-planner</h1>
     <form id="reservationForm">
         <label for="userName">Your Name:</label>
         <input type="text" id="userName" required>
