--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome - Genius Bistro</title>
+    <title>Welcome - hungry-people-planner</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
