--- a/seating.html
+++ b/seating.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Seating - Genius Bistro</title>
+    <title>Seating - hungry-people-planner</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
